--- a/css/styles.css
+++ b/css/styles.css
@@ -3763,7 +3763,7 @@ textarea.form-control-lg {
 }
 .navbar-brand {
   border-radius: 30px;
-  height: 100px;
+  height: 120px;
 }
 .navbar-brand:hover, .navbar-brand:focus {
 
@@ -10958,7 +10958,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/2nd-bg.jpg");
+  /* background-image: url("../assets/img/2nd-bg.jpg"); */
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -11525,3 +11525,35 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 
+/* styles for video */
+
+/* Basic styling for the video container */
+.video-background {
+  position: relative;
+  height: 100vh; /* Full screen height */
+  width: 100%;
+  overflow: hidden;
+}
+
+/* Styling for the video itself */
+#bgVideo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
+  z-index: -1; /* Puts the video behind the content */
+  background-size: cover;
+}
+
+/* Styling for content over the video */
+.content {
+  position: relative;
+  z-index: 1; /* Ensures content stays above the video */
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
