--- a/css/styles.css
+++ b/css/styles.css
@@ -620,6 +620,10 @@ progress {
   height: auto;
 }
 
+.fa-inverse {
+  color: #201f1f;
+}
+
 .figure {
   display: inline-block;
 }
@@ -10989,10 +10993,10 @@ header.masthead {
 }
 
 header.masthead .container{
-  margin-top: 400px;
+  margin-top: 270px;
 }
 header.masthead .masthead-subheading {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-style: italic;
   line-height: 1.5rem;
   margin-bottom: 25px;
@@ -11000,9 +11004,9 @@ header.masthead .masthead-subheading {
   /* backdrop-filter: blur(10px); */
 }
 header.masthead .masthead-heading {
-  font-size: 2.25rem;
+  font-size: 1.6rem;
   font-weight: 700;
-  line-height: 3.25rem;
+  line-height: 2.25rem;
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
