--- a/css/styles.css
+++ b/css/styles.css
@@ -3641,10 +3641,12 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
   font-size: var(--bs-nav-link-font-size);
-  font-weight: var(--bs-nav-link-font-weight);
+  font-weight: 800;
   color: var(--bs-nav-link-color);
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  border-bottom: solid 2px;
+  border-radius: 10px;  
 }
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
